Calendar App added to portfolio section

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
             </div>
             <div class="skill">
               <div class="skill-title display-flex justify-space-between">
-                CSS <span>80 %</span>
+                CSS <span>70 %</span>
               </div>
               <div class="skill-progress-bar">
-                <div id="skill2" class="skill-progress"></div>
+                <div id="skill4" class="skill-progress"></div>
               </div>
             </div>
             <div class="skill">
@@ -168,10 +168,10 @@
             </div>
             <div class="skill">
               <div class="skill-title display-flex justify-space-between">
-                React <span>70 %</span>
+                React <span>80 %</span>
               </div>
               <div class="skill-progress-bar">
-                <div id="skill4" class="skill-progress"></div>
+                <div id="skill2" class="skill-progress"></div>
               </div>
             </div>
           </div>
@@ -446,19 +446,24 @@
                 href="https://tlahuiz-ux.netlify.app"
                 target="_blank"
               >
+                <span>Custom Portfolio</span>
+                <br />
                 <span>Go to site</span>
               </a>
             </div>
             <div class="col-12 col-md-6 col-lg-4 portfolio-container">
+              <!-- 1300 GC SS -->
               <img
-                src="./assets/imgs/worldWikiApp.png"
-                alt="Countries React App"
+                src="./assets/imgs/calendarAppReact.png"
+                alt="Calendar App"
               />
               <a
                 class="show-more-btn"
-                href="https://world-wiki.netlify.app"
+                href="https://calendar-app-maig.netlify.app"
                 target="_blank"
               >
+                <span>Calendar App</span>
+                <br />
                 <span>Go to site</span>
               </a>
             </div>
@@ -472,6 +477,8 @@
                 href="https://todoapp-maig.netlify.app"
                 target="_blank"
               >
+                <span>TODO List App</span>
+                <br />
                 <span>Go to site</span>
               </a>
             </div>
@@ -485,6 +492,8 @@
                 href="https://tienda-muebles-maig.netlify.app"
                 target="_blank"
               >
+                <span>Tienda Muebles Site</span>
+                <br />
                 <span>Go to site</span>
               </a>
             </div>
@@ -498,6 +507,8 @@
                 href="https://techpro-maig.netlify.app/"
                 target="_blank"
               >
+                <span>TechPro Store Site</span>
+                <br />
                 <span>Go to site</span>
               </a>
             </div>
@@ -508,6 +519,23 @@
                 href="https://lacafeteria-maig.netlify.app/"
                 target="_blank"
               >
+                <span>La Cafetería Site</span>
+                <br />
+                <span>Go to site</span>
+              </a>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 portfolio-container">
+              <img
+                src="./assets/imgs/worldWikiApp.png"
+                alt="Countries React App"
+              />
+              <a
+                class="show-more-btn"
+                href="https://world-wiki.netlify.app"
+                target="_blank"
+              >
+                <span>WorldWiki App</span>
+                <br />
                 <span>Go to site</span>
               </a>
             </div>
@@ -521,6 +549,8 @@
                 href="https://journal-app-maig.netlify.app/"
                 target="_blank"
               >
+                <span>Journal App</span>
+                <br />
                 <span>Go to site</span>
               </a>
             </div>
